# giraffe

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: automerge.yml  rust.yml
src/: main.rs
