[package]
name = "giraffe"
version = "0.1.0"
authors = ["Yishen Miao <mys721tx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "0.40"
rusqlite = { version = "0.24", features = ["bundled"] }
clap = "2.33"
serde = "1.0"
csv = "1.1"
multimap = "0.8.3"
