[package]
name = "giraffe"
version = "0.1.0"
authors = ["Yishen Miao <mys721tx@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "2.3"
rusqlite = { version = "0.36", features = ["bundled"] }
clap = "4.5"
serde = "1.0"
csv = "1.3"
multimap = "0.10.0"
